# personal-site

./: .gitignore  CNAME  Cargo.toml  README.md  app.css  index.html  why-is-rust-so-fast.html  why_is_rust_so_fast.html
.cargo-husky/hooks/: pre-commit  pre-push
.circleci/: config.yml
.github/workflows/: deploy.yml
about/: index.html
blog/: index.html
blog/a_b_testing_with_cloudflare_workers/: index.html
blog/developing_the_right_way/: index.html
blog/engineering_solutions/: index.html
blog/getting_the_first_job/: index.html
blog/javascript_detective_work/: index.html
blog/perf_testing_js/: index.html
blog/svg_vs_icon_font/: index.html
blog/updating_a_dsl/: index.html
blog/why_is_rust_so_fast/: index.html
blog/windows_data_with_actors/: index.html
blog/windows_data_with_actors_2/: index.html
blog/windows_event_data_with_rust/: index.html
blog/windows_event_data_with_rust_2/: index.html
cv/: index.html
doc/: index.html
projects/: index.html
projects/brutemoji/: index.html
projects/random_task/: index.html  random_task.js
projects/wasmsweeper/: index.html  minesweeper.js
src/: about.rs  app.css  cv.json  cv.rs  head.rs  header.rs  home.rs  main.css  main.rs  projects.json  projects.rs
src/blog/: a_b_testing_with_cloudflare_workers.rs  developing_the_right_way.rs  getting_the_first_job.rs  javascript_detective_work.rs  mod.rs  perf_testing_js.rs  solution_engineering.rs  svg_vs_icon_font.rs  updating_a_dsl.rs  why_is_rust_so_fast.rs  windows_data_with_actors.rs  windows_data_with_actors_2.rs  windows_event_data_with_rust.rs  (+1 more)
(+11 files in other folders)
