[package]
name = "portfolio"
version = "0.1.12"
authors = ["Tom Pridham <pridham.tom@gmail.com>"]
edition = "2018"

[dependencies]
maud = "0.20.0"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"

[dev-dependencies.cargo-husky]
version = "1.3.0"
default-features = false
features = ["user-hooks"]
